Fix XML reference layout on mobile (#936)

--- a/css/customstyles-precice.css
+++ b/css/customstyles-precice.css
@@ -587,6 +587,13 @@ ul.devlist>li {
   max-width: 100%;
 }
 
+.post-content .katex-display {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
 .post-content .table thead {
   --bs-table-color: #fff;
   --bs-table-bg: #777;
